rename imports from css/ to assets/css/pages

--- a/pages/airbnb-for-work.html
+++ b/pages/airbnb-for-work.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="../assets/css/base.css" />
     <link rel="stylesheet" href="../assets/css/utilities.css" />
-    <link rel="stylesheet" href="css/airbnb-for-work.css" />
+    <link rel="stylesheet" href="assets/css/pages/airbnb-for-work.css" />
     <link rel="stylesheet" href="../assets/css/layouts.css" />
     <title>Airbnb For Work - Account Settings - Airbnb</title>
   </head>
