--- a/pages/basics.html
+++ b/pages/basics.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/basics.css" />
+    <link rel="stylesheet" href="assets/css/pages/basics.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -611,7 +611,7 @@
                                     padding: 0.25rem 0.5rem;
                                   }
 
-                                  [data-reach-combobox-option][aria-selected="true"] {
+                                  [data-reach-combobox-option][aria-selected='true'] {
                                     background: hsl(211, 10%, 95%);
                                   }
 
@@ -619,7 +619,7 @@
                                     background: hsl(211, 10%, 92%);
                                   }
 
-                                  [data-reach-combobox-option][aria-selected="true"]:hover {
+                                  [data-reach-combobox-option][aria-selected='true']:hover {
                                     background: hsl(211, 10%, 90%);
                                   }
 
