--- a/pages/covidsafety.html
+++ b/pages/covidsafety.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="../assets/css/base.css" />
     <link rel="stylesheet" href="../assets/css/utilities.css" />
-    <link rel="stylesheet" href="css/covidsafety.css" />
+    <link rel="stylesheet" href="assets/css/pages/covidsafety.css" />
     <link rel="stylesheet" href="../assets/css/layouts.css" />
     <title>COVID-19 Safety</title>
   </head>
