--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/dashboard.css" />
+    <link rel="stylesheet" href="assets/css/pages/dashboard.css" />
     <title>Experiences Dashboard - Dashboard</title>
     <style></style>
   </head>
@@ -160,7 +160,7 @@
         color: #222222 !important;
       }
       ._ywzjut3:hover::after {
-        content: "" !important;
+        content: '' !important;
         display: block !important;
         width: 100% !important;
         height: 3px !important;
@@ -170,7 +170,7 @@
         z-index: 1999 !important;
       }
       ._ywzjut3::after {
-        content: "" !important;
+        content: '' !important;
         display: block !important;
         width: 100% !important;
         height: 3px !important;
@@ -204,7 +204,7 @@
         color: #222222 !important;
       }
       ._13xhdjz2:hover::after {
-        content: "" !important;
+        content: '' !important;
         display: block !important;
         width: 100% !important;
         height: 3px !important;
@@ -266,7 +266,7 @@
         outline: 0px !important;
       }
       ._4syaavn:hover::after {
-        content: "" !important;
+        content: '' !important;
         display: block !important;
         width: 28px !important;
         height: 3px !important;
@@ -1281,8 +1281,8 @@
         --jaa-ni-h: 16px;
         --ic-zlb-s: 24px;
         --kc-t-qr-j: 32px;
-        --e-ls-qkw: "Circular", -apple-system, "BlinkMacSystemFont", "Roboto",
-          "Helvetica Neue", sans-serif;
+        --e-ls-qkw: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
+          'Helvetica Neue', sans-serif;
         --fy-rs-ca: 18px;
         --d-ar-t-o-n: 22px;
         --lhy-d-yl: 22px;
@@ -1315,11 +1315,11 @@
       }
       .c1yo0219[class][class]::before {
         display: flex;
-        content: "";
+        content: '';
       }
       .c1yo0219[class][class]::after {
         display: flex;
-        content: "";
+        content: '';
       }
       .l1tdvn0e[class][class] {
         appearance: none;
