--- a/pages/experiences.html
+++ b/pages/experiences.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/experiences.css" />
+    <link rel="stylesheet" href="assets/css/pages/experiences.css" />
     <title>Experiences Dashboard - Experiences</title>
   </head>
   <body class="with-new-header">
@@ -159,7 +159,7 @@
         color: #222222 !important;
       }
       ._13xhdjz2:hover::after {
-        content: "" !important;
+        content: '' !important;
         display: block !important;
         width: 100% !important;
         height: 3px !important;
@@ -193,7 +193,7 @@
         color: #222222 !important;
       }
       ._ywzjut3:hover::after {
-        content: "" !important;
+        content: '' !important;
         display: block !important;
         width: 100% !important;
         height: 3px !important;
@@ -203,7 +203,7 @@
         z-index: 1999 !important;
       }
       ._ywzjut3::after {
-        content: "" !important;
+        content: '' !important;
         display: block !important;
         width: 100% !important;
         height: 3px !important;
@@ -265,7 +265,7 @@
         outline: 0px !important;
       }
       ._4syaavn:hover::after {
-        content: "" !important;
+        content: '' !important;
         display: block !important;
         width: 28px !important;
         height: 3px !important;
@@ -909,7 +909,7 @@
         border-style: solid !important;
         border-width: 2px 2px 0 0 !important;
         bottom: 0px !important;
-        content: "" !important;
+        content: '' !important;
         display: block !important;
         width: 10px !important;
         height: 10px !important;
@@ -1629,8 +1629,8 @@
         --jaa-ni-h: 16px;
         --ic-zlb-s: 24px;
         --kc-t-qr-j: 32px;
-        --e-ls-qkw: "Circular", -apple-system, "BlinkMacSystemFont", "Roboto",
-          "Helvetica Neue", sans-serif;
+        --e-ls-qkw: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
+          'Helvetica Neue', sans-serif;
         --fy-rs-ca: 18px;
         --d-ar-t-o-n: 22px;
         --lhy-d-yl: 22px;
@@ -1663,11 +1663,11 @@
       }
       .c1yo0219[class][class]::before {
         display: flex;
-        content: "";
+        content: '';
       }
       .c1yo0219[class][class]::after {
         display: flex;
-        content: "";
+        content: '';
       }
       .l1tdvn0e[class][class] {
         appearance: none;
@@ -2389,7 +2389,7 @@
         z-index: 9;
       }
       .nomreqp[class][class]::after {
-        content: "";
+        content: '';
         display: block;
         position: absolute;
         top: 0;
@@ -2528,7 +2528,7 @@
         background-color: var(--f-mkcy-f);
       }
       .pnookdf[class][class]::before {
-        content: "";
+        content: '';
         display: block;
         position: absolute;
         top: 0;
