--- a/pages/inbox.html
+++ b/pages/inbox.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/inbox.css" />
+    <link rel="stylesheet" href="assets/css/pages/inbox.css" />
     <title>All messages - Airbnb</title>
   </head>
   <body class="with-new-header touch">
@@ -159,7 +159,7 @@
         color: #222222 !important;
       }
       ._13xhdjz2:hover::after {
-        content: "" !important;
+        content: '' !important;
         display: block !important;
         width: 100% !important;
         height: 3px !important;
@@ -193,7 +193,7 @@
         color: #222222 !important;
       }
       ._ywzjut3:hover::after {
-        content: "" !important;
+        content: '' !important;
         display: block !important;
         width: 100% !important;
         height: 3px !important;
@@ -203,7 +203,7 @@
         z-index: 1999 !important;
       }
       ._ywzjut3::after {
-        content: "" !important;
+        content: '' !important;
         display: block !important;
         width: 100% !important;
         height: 3px !important;
@@ -265,7 +265,7 @@
         outline: 0px !important;
       }
       ._4syaavn:hover::after {
-        content: "" !important;
+        content: '' !important;
         display: block !important;
         width: 28px !important;
         height: 3px !important;
@@ -474,12 +474,12 @@
       }
       ._17c3r99:not([data-is-inline]):after {
         display: block !important;
-        content: "" !important;
+        content: '' !important;
         margin-top: var(--panel-layout-top-offset, 0px) !important;
       }
       ._17c3r99:not([data-is-inline]):before {
         display: block !important;
-        content: "" !important;
+        content: '' !important;
         margin-bottom: 56px !important;
       }
       ._t0tx82 {
@@ -1283,7 +1283,7 @@
         outline: none !important;
       }
       ._10wieer::before {
-        content: "" !important;
+        content: '' !important;
         display: block !important;
         position: absolute !important;
         top: 50% !important;
@@ -1452,7 +1452,7 @@
         outline: none !important;
       }
       ._1adqvh3::before {
-        content: "" !important;
+        content: '' !important;
         display: block !important;
         position: absolute !important;
         top: 50% !important;
@@ -1763,7 +1763,7 @@
         outline: none !important;
       }
       ._v54ooj::before {
-        content: "" !important;
+        content: '' !important;
         display: block !important;
         position: absolute !important;
         top: 50% !important;
@@ -1796,7 +1796,7 @@
         border-color: #222222 !important;
       }
       ._1vwho579:after {
-        content: "" !important;
+        content: '' !important;
         width: -webkit-calc(100% + 2px) !important;
         width: -moz-calc(100% + 2px) !important;
         width: calc(100% + 2px) !important;
@@ -3373,8 +3373,8 @@
         --jaa-ni-h: 16px;
         --ic-zlb-s: 24px;
         --kc-t-qr-j: 32px;
-        --e-ls-qkw: "Circular", -apple-system, "BlinkMacSystemFont", "Roboto",
-          "Helvetica Neue", sans-serif;
+        --e-ls-qkw: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
+          'Helvetica Neue', sans-serif;
         --fy-rs-ca: 18px;
         --d-ar-t-o-n: 22px;
         --lhy-d-yl: 22px;
@@ -3407,11 +3407,11 @@
       }
       .c1yo0219[class][class]::before {
         display: flex;
-        content: "";
+        content: '';
       }
       .c1yo0219[class][class]::after {
         display: flex;
-        content: "";
+        content: '';
       }
       .l1tdvn0e[class][class] {
         appearance: none;
@@ -6132,7 +6132,7 @@
         z-index: 9;
       }
       .nomreqp[class][class]::after {
-        content: "";
+        content: '';
         display: block;
         position: absolute;
         top: 0;
@@ -6271,7 +6271,7 @@
         background-color: var(--f-mkcy-f);
       }
       .pnookdf[class][class]::before {
-        content: "";
+        content: '';
         display: block;
         position: absolute;
         top: 0;
@@ -7249,19 +7249,19 @@
       }
       .c1yo0219[class][class]::before {
         display: flex;
-        content: "";
+        content: '';
       }
       .c1yo0219[class][class]::after {
         display: flex;
-        content: "";
+        content: '';
       }
       .c1yo0219[class][class]::before {
         display: flex;
-        content: "";
+        content: '';
       }
       .c1yo0219[class][class]::after {
         display: flex;
-        content: "";
+        content: '';
       }
     </style>
     <div data-application="true">
