--- a/pages/merchandising.html
+++ b/pages/merchandising.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="../assets/css/base.css" />
     <link rel="stylesheet" href="../assets/css/utilities.css" />
-    <link rel="stylesheet" href="css/merchandising.css" />
+    <link rel="stylesheet" href="assets/css/pages/merchandising.css" />
     <link rel="stylesheet" href="../assets/css/layouts.css" />
     <title>
       Airbnb: Vacation Rentals, Cabins, Beach Houses, Unique Homes &amp;
