--- a/pages/personal-info.html
+++ b/pages/personal-info.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="../assets/css/base.css" />
     <link rel="stylesheet" href="../assets/css/utilities.css" />
-    <link rel="stylesheet" href="css/personal-info.css" />
+    <link rel="stylesheet" href="assets/css/pages/personal-info.css" />
     <link rel="stylesheet" href="../assets/css/layouts.css" />
     <link rel="stylesheet" href="../assets/css/components.css" />
     <title>Personal Information - Account Settings - Airbnb</title>
