--- a/pages/privacy-and-sharing.html
+++ b/pages/privacy-and-sharing.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="../assets/css/base.css" />
     <link rel="stylesheet" href="../assets/css/utilities.css" />
-    <link rel="stylesheet" href="css/privacy-and-sharing.css" />
+    <link rel="stylesheet" href="assets/css/pages/privacy-and-sharing.css" />
     <link rel="stylesheet" href="../assets/css/layouts.css" />
     <title>Privacy &amp; Sharing - Account Settings - Airbnb</title>
   </head>
