--- a/pages/releases.html
+++ b/pages/releases.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../assets/css/framework-base-alpha.css" />
     <link rel="stylesheet" href="../assets/css/framework-global-alpha.css" />
     <link rel="stylesheet" href="../assets/css/framework-module-alpha.css" />
-    <link rel="stylesheet" href="css/releases.css" />
+    <link rel="stylesheet" href="assets/css/pages/releases.css" />
     <title>
       Introducing the Airbnb 2021 Winter Release: 50+ upgrades and innovations
       across our entire service
