--- a/pages/reviews.html
+++ b/pages/reviews.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="../assets/css/base.css" />
     <link rel="stylesheet" href="../assets/css/utilities.css" />
-    <link rel="stylesheet" href="css/reviews.css" />
+    <link rel="stylesheet" href="assets/css/pages/reviews.css" />
     <title>Write a public review for Jose Angelo - Airbnb</title>
   </head>
   <body class="with-new-header">
