--- a/pages/signup_login.html
+++ b/pages/signup_login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="../assets/css/base.css" />
     <link rel="stylesheet" href="../assets/css/utilities.css" />
-    <link rel="stylesheet" href="css/signup_login.css" />
+    <link rel="stylesheet" href="assets/css/pages/signup_login.css" />
     <link rel="stylesheet" href="../assets/css/layouts.css" />
     <title>Log In / Sign Up</title>
   </head>
