--- a/pages/wishlist.html
+++ b/pages/wishlist.html
@@ -6,7 +6,7 @@
     <title>1st Wishlist · Wishlists - Airbnb</title>
     <link rel="stylesheet" href="../assets/css/base.css" />
     <link rel="stylesheet" href="../assets/css/utilities.css">
-    <link rel="stylesheet" href="css/wishlist.css" />
+    <link rel="stylesheet" href="assets/css/pages/wishlist.css" />
   </head>
   <body class="with-new-header">
     <div id="site-skip-links">
