--- a/pages/account-settings.html
+++ b/pages/account-settings.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="../assets/css/base.css" />
     <link rel="stylesheet" href="../assets/css/utilities.css" />
-    <link rel="stylesheet" href="css/account-settings.css" />
+    <link rel="stylesheet" href="assets/css/pages/account-settings.css" />
     <link rel="stylesheet" href="../assets/css/layouts.css" />
     <title>Account Settings - Airbnb</title>
   </head>
