--- a/pages/calendar_agenda.html
+++ b/pages/calendar_agenda.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/calendar_agenda.css" />
+    <link rel="stylesheet" href="assets/css/pages/calendar_agenda.css" />
     <title>Experiences Dashboard - Calendar</title>
   </head>
   <body class="with-new-header touch">
