--- a/pages/contact-host.html
+++ b/pages/contact-host.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="../assets/css/base.css" />
     <link rel="stylesheet" href="../assets/css/utilities.css" />
-    <link rel="stylesheet" href="css/contact-host.css" />
+    <link rel="stylesheet" href="assets/css/pages/contact-host.css" />
     <link rel="stylesheet" href="../assets/css/layouts.css" />
     <title>Contact Rinaldo - Airbnb</title>
   </head>
