--- a/pages/experienceType.html
+++ b/pages/experienceType.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/experienceType.css" />
+    <link rel="stylesheet" href="assets/css/pages/experienceType.css" />
     <title>Document</title>
   </head>
   <body class="with-new-header">
@@ -234,8 +234,8 @@
         --jaa-ni-h: 16px;
         --ic-zlb-s: 24px;
         --kc-t-qr-j: 32px;
-        --e-ls-qkw: "Circular", -apple-system, "BlinkMacSystemFont", "Roboto",
-          "Helvetica Neue", sans-serif;
+        --e-ls-qkw: 'Circular', -apple-system, 'BlinkMacSystemFont', 'Roboto',
+          'Helvetica Neue', sans-serif;
         --fy-rs-ca: 18px;
         --d-ar-t-o-n: 22px;
         --lhy-d-yl: 22px;
@@ -268,11 +268,11 @@
       }
       .c1yo0219[class][class]::before {
         display: flex;
-        content: "";
+        content: '';
       }
       .c1yo0219[class][class]::after {
         display: flex;
-        content: "";
+        content: '';
       }
       .l1tdvn0e[class][class] {
         appearance: none;
@@ -1630,7 +1630,7 @@
         z-index: 9;
       }
       .nomreqp[class][class]::after {
-        content: "";
+        content: '';
         display: block;
         position: absolute;
         top: 0;
@@ -1769,7 +1769,7 @@
         background-color: var(--f-mkcy-f);
       }
       .pnookdf[class][class]::before {
-        content: "";
+        content: '';
         display: block;
         position: absolute;
         top: 0;
