--- a/pages/explore.html
+++ b/pages/explore.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="../assets/css/framework-global-alpha.css" />
     <link rel="stylesheet" href="../assets/css/framework-module-alpha.css" />
 
-    <link rel="stylesheet" href="./css/explore.css" />
-    <link rel="stylesheet" href="./css/explore-2.css" />
+    <link rel="stylesheet" href="assets/css/pages/explore.css" />
+    <link rel="stylesheet" href="assets/css/pages/explore-2.css" />
     <link rel="stylesheet" href="../assets/css/utilities.css" />
   </head>
 
