--- a/pages/invite-friends.html
+++ b/pages/invite-friends.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="../assets/css/base.css" />
     <link rel="stylesheet" href="../assets/css/utilities.css" />
-    <link rel="stylesheet" href="css/invite-friends.css" />
+    <link rel="stylesheet" href="assets/css/pages/invite-friends.css" />
     <link rel="stylesheet" href="../assets/css/layouts.css" />
     <link rel="stylesheet" href="../assets/css/components.css" />
     <title>Airbnb Coupon Codes: Invite Your Friends</title>
