--- a/pages/login-security.html
+++ b/pages/login-security.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="../assets/css/base.css" />
     <link rel="stylesheet" href="../assets/css/utilities.css" />
-    <link rel="stylesheet" href="css/login-security.css" />
+    <link rel="stylesheet" href="assets/css/pages/login-security.css" />
     <link rel="stylesheet" href="../assets/css/layouts.css" />
     <title>Login &amp; Security - Account Settings - Airbnb</title>
   </head>
