--- a/pages/notifications.html
+++ b/pages/notifications.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="../assets/css/base.css" />
     <link rel="stylesheet" href="../assets/css/utilities.css" />
-    <link rel="stylesheet" href="css/notifications.css" />
+    <link rel="stylesheet" href="assets/css/pages/notifications.css" />
     <link rel="stylesheet" href="../assets/css/layouts.css" />
     <title>Messages • Airbnb</title>
   </head>
