--- a/pages/specific_trip.html
+++ b/pages/specific_trip.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/specific_trip.css" />
+    <link rel="stylesheet" href="assets/css/pages/specific_trip.css" />
     <title>Your trip preview - Airbnb</title>
   </head>
   <body class="with-new-header touch" style="overflow: hidden">
