--- a/pages/wishlists.html
+++ b/pages/wishlists.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="../assets/css/base.css" />
     <link rel="stylesheet" href="../assets/css/utilities.css" />
-    <link rel="stylesheet" href="css/wishlists.css" />
+    <link rel="stylesheet" href="assets/css/pages/wishlists.css" />
     <link rel="stylesheet" href="../assets/css/layouts.css" />
     <title>Your lists · Wishlists - Airbnb</title>
   </head>
