rename imports from ../assets -> assets

--- a/pages/professional-hosting.html
+++ b/pages/professional-hosting.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="../assets/css/base.css" />
-    <link rel="stylesheet" href="../assets/css/utilities.css" />
+    <link rel="stylesheet" href="assets/css/base.css" />
+    <link rel="stylesheet" href="assets/css/utilities.css" />
     <link rel="stylesheet" href="assets/css/pages/professional-hosting.css" />
-    <link rel="stylesheet" href="../assets/css/layouts.css" />
+    <link rel="stylesheet" href="assets/css/layouts.css" />
     <title>Professional Hosting - Account Settings - Airbnb</title>
   </head>
   <body class="with-new-header">
