--- a/pages/covidsafety.html
+++ b/pages/covidsafety.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="../assets/css/base.css" />
-    <link rel="stylesheet" href="../assets/css/utilities.css" />
+    <link rel="stylesheet" href="assets/css/base.css" />
+    <link rel="stylesheet" href="assets/css/utilities.css" />
     <link rel="stylesheet" href="assets/css/pages/covidsafety.css" />
-    <link rel="stylesheet" href="../assets/css/layouts.css" />
+    <link rel="stylesheet" href="assets/css/layouts.css" />
     <title>COVID-19 Safety</title>
   </head>
   <body class="with-new-header">
