--- a/pages/explore.html
+++ b/pages/explore.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Explore</title>
 
-    <link rel="stylesheet" href="../assets/css/base.css" />
-    <link rel="stylesheet" href="../assets/css/framework-global-alpha.css" />
-    <link rel="stylesheet" href="../assets/css/framework-module-alpha.css" />
+    <link rel="stylesheet" href="assets/css/base.css" />
+    <link rel="stylesheet" href="assets/css/framework-global-alpha.css" />
+    <link rel="stylesheet" href="assets/css/framework-module-alpha.css" />
 
     <link rel="stylesheet" href="assets/css/pages/explore.css" />
     <link rel="stylesheet" href="assets/css/pages/explore-2.css" />
-    <link rel="stylesheet" href="../assets/css/utilities.css" />
+    <link rel="stylesheet" href="assets/css/utilities.css" />
   </head>
 
   <body class="with-new-header">
