--- a/pages/releases.html
+++ b/pages/releases.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="../assets/css/framework-base-alpha.css" />
-    <link rel="stylesheet" href="../assets/css/framework-global-alpha.css" />
-    <link rel="stylesheet" href="../assets/css/framework-module-alpha.css" />
+    <link rel="stylesheet" href="assets/css/framework-base-alpha.css" />
+    <link rel="stylesheet" href="assets/css/framework-global-alpha.css" />
+    <link rel="stylesheet" href="assets/css/framework-module-alpha.css" />
     <link rel="stylesheet" href="assets/css/pages/releases.css" />
     <title>
       Introducing the Airbnb 2021 Winter Release: 50+ upgrades and innovations
