move pages/* -> /, pages/js/* -> assets/js & assets/js/pages, update imports

--- a/account-notifications.html
+++ b/account-notifications.html
@@ -2611,7 +2611,7 @@
     </div>
     <!-- /Unsubscribe Modal -->
 
-    <script src="js/components.js" defer></script>
-    <script src="js/account-notifications.js" defer></script>
+    <script src="assets/js/components.js" defer></script>
+    <script src="assets/js/pages/account-notifications.js" defer></script>
   </body>
 </html>
