--- a/homepage.html
+++ b/homepage.html
@@ -20251,7 +20251,7 @@
     </div>
     <!-- /Filter modal -->
 
-    <script src="../pages/js/components.js" defer></script>
-    <script src="js/homepage.js" defer></script>
+    <script src="assets/js/components.js" defer></script>
+    <script src="assets/js/pages/homepage.js" defer></script>
   </body>
 </html>
