--- a/notifications.html
+++ b/notifications.html
@@ -1554,6 +1554,6 @@
       </div>
     </div>
 
-    <script src="js/notifications.js" defer></script>
+    <script src="assets/js/pages/notifications.js" defer></script>
   </body>
 </html>
