--- a/personal-info.html
+++ b/personal-info.html
@@ -8524,7 +8524,7 @@
     </div>
     <!-- /Goverment ID remove modal -->
 
-    <script src="js/components.js" defer></script>
-    <script src="js/personal-info.js" defer></script>
+    <script src="assets/js/components.js" defer></script>
+    <script src="assets/js/pages/personal-info.js" defer></script>
   </body>
 </html>
