--- a/privacy-and-sharing.html
+++ b/privacy-and-sharing.html
@@ -1943,7 +1943,7 @@
       </div>
     </div>
 
-    <script src="js/components.js" defer></script>
-    <script src="js/privacy-and-sharing.js" defer></script>
+    <script src="assets/js/components.js" defer></script>
+    <script src="assets/js/pages/privacy-and-sharing.js" defer></script>
   </body>
 </html>
