--- a/profile-reviews.html
+++ b/profile-reviews.html
@@ -779,6 +779,6 @@
       </div>
     </div>
 
-    <script src="js/profile-reviews.js" defer></script>
+    <script src="assets/js/pages/profile-reviews.js" defer></script>
   </body>
 </html>
