--- a/releases.html
+++ b/releases.html
@@ -1507,6 +1507,6 @@
         </div>
       </div>
     </div>
-    <script src="js/releases.js" defer></script>
+    <script src="assets/js/pages/releases.js" defer></script>
   </body>
 </html>
