--- a/help.html
+++ b/help.html
@@ -6144,7 +6144,7 @@
       </div>
     </div>
 
-    <script src="js/components.js" defer></script>
-    <script src="js/help.js" defer></script>
+    <script src="assets/js/components.js" defer></script>
+    <script src="assets/js/pages/help.js" defer></script>
   </body>
 </html>
