--- a/invite-friends.html
+++ b/invite-friends.html
@@ -887,6 +887,6 @@
     </div>
     <!-- /Show more details modal -->
 
-    <script src="js/invite-friends.js" defer></script>
+    <script src="assets/js/pages/invite-friends.js" defer></script>
   </body>
 </html>
