--- a/profile.html
+++ b/profile.html
@@ -3407,7 +3407,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
     </div>
     <!-- /Learn more modal -->
 
-    <script src="js/components.js" defer></script>
-    <script src="js/profile.js" defer></script>
+    <script src="assets/js/components.js" defer></script>
+    <script src="assets/js/pages/profile.js" defer></script>
   </body>
 </html>
