--- a/reviews.html
+++ b/reviews.html
@@ -1409,6 +1409,6 @@
         </div>
       </div>
     </div>
-    <script src="js/reviews.js" defer></script>
+    <script src="assets/js/pages/reviews.js" defer></script>
   </body>
 </html>
