--- a/signup_login.html
+++ b/signup_login.html
@@ -7012,6 +7012,6 @@
       </div>
     </div>
 
-    <script src="js/signup_login.js" defer></script>
+    <script src="assets/js/pages/signup_login.js" defer></script>
   </body>
 </html>
