move images/* -> assets/images, update imports

--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
     <header class="page-container page-container-responsive space-top-4">
       <a href="/" class="icon icon-airbnb link-icon h2">
         <span class="screen-reader-only"> Airbnb </span>
-        <img src="images/404-logo.png" alt="" />
+        <img src="assets/images/404-logo.png" alt="" />
       </a>
     </header>
     <div class="page-container page-container-responsive">
