--- a/products.html
+++ b/products.html
@@ -2801,7 +2801,7 @@
                                                   <div></div>
                                                   <div class="_grw3gzy">
                                                     <img
-                                                      src="images/map-products.png"
+                                                      src="assets/images/map-products.png"
                                                       alt=""
                                                       class="mw-100"
                                                     />
@@ -19469,7 +19469,7 @@
                                                 <div></div>
                                                 <div class="_384m8u">
                                                   <img
-                                                    src="images/map-products.png"
+                                                    src="assets/images/map-products.png"
                                                     alt=""
                                                     class="mw-100"
                                                   />
