--- a/edit/about.html
+++ b/edit/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/about.css" />
+    <link rel="stylesheet" href="../assets/css/pages/edit/about.css" />
     <title>About - Airbnb</title>
   </head>
   <body class="with-new-header touch">
