update page-specific css import in payments

--- a/payments/tax-info.html
+++ b/payments/tax-info.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet" href="assets/css/base.css" />
     <link rel="stylesheet" href="assets/css/utilities.css" />
-    <link rel="stylesheet" href="css/payments.css" />
+    <link rel="stylesheet" href="assets/css/pages/payments.css" />
     <link rel="stylesheet" href="assets/css/layouts.css" />
     <title>Manage your taxpayer info - Airbnb</title>
   </head>
