--- a/submission/GroupSize.html
+++ b/submission/GroupSize.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="stylesheet" href="css/GroupSize.css" />
+    <link
+      rel="stylesheet"
+      href="../assets/css/pages/submission/GroupSize.css"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Submit your experience - Group Size - Airbnb</title>
   </head>
