--- a/submission/exp_type.html
+++ b/submission/exp_type.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/exp_type.css" />
+    <link rel="stylesheet" href="../assets/css/pages/submission/exp_type.css" />
     <title>Submit your experience - Experience type - Airbnb</title>
   </head>
   <body class="with-new-header">
