--- a/submission/participation.html
+++ b/submission/participation.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/participation.css" />
+    <link
+      rel="stylesheet"
+      href="../assets/css/pages/submission/participation.css"
+    />
     <title>Submit your experience - Participation - Airbnb</title>
   </head>
   <body class="with-new-header">
