--- a/become-a-host/description.html
+++ b/become-a-host/description.html
@@ -8,7 +8,10 @@
 
     <link rel="stylesheet" href="../assets/css/base.css" />
     <link rel="stylesheet" href="../assets/css/utilities.css" />
-    <link rel="stylesheet" href="../css/become-a-host/description.css" />
+    <link
+      rel="stylesheet"
+      href="../assets/css/pages/become-a-host/description.css"
+    />
   </head>
 
   <body class="with-new-header">
@@ -502,4 +505,3 @@ Take a break and unwind at this peaceful oasis. Close to metro manila and in Cav
     </div>
   </body>
 </html>
-
