--- a/become-a-host/floor-plan.html
+++ b/become-a-host/floor-plan.html
@@ -8,7 +8,10 @@
 
     <link rel="stylesheet" href="../assets/css/base.css" />
     <link rel="stylesheet" href="../assets/css/utilities.css" />
-    <link rel="stylesheet" href="../css/become-a-host/floor-plan.css" />
+    <link
+      rel="stylesheet"
+      href="../assets/css/pages/become-a-host/floor-plan.css"
+    />
   </head>
 
   <body class="with-new-header">
@@ -608,4 +611,3 @@
     </div>
   </body>
 </html>
-
