--- a/become-a-host/privacy-type.html
+++ b/become-a-host/privacy-type.html
@@ -8,7 +8,10 @@
 
     <link rel="stylesheet" href="../assets/css/base.css" />
     <link rel="stylesheet" href="../assets/css/utilities.css" />
-    <link rel="stylesheet" href="../css/become-a-host/privacy-type.css" />
+    <link
+      rel="stylesheet"
+      href="../assets/css/pages/become-a-host/privacy-type.css"
+    />
   </head>
 
   <body class="with-new-header">
@@ -263,4 +266,3 @@
     </div>
   </body>
 </html>
-
