update explore js path

--- a/explore.html
+++ b/explore.html
@@ -42099,6 +42099,6 @@
       </div>
     </div>
 
-    <script src="./js/explore.js"></script>
+    <script src="assets/js/pages/explore.js"></script>
   </body>
 </html>
