utilize global.css & account-notifications.css in account-notifications

--- a/account-notifications.html
+++ b/account-notifications.html
@@ -3,11 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="assets/css/base.css" />
-    <link rel="stylesheet" href="assets/css/utilities.css" />
+    <link rel="stylesheet" href="assets/css/global.css" />
     <link rel="stylesheet" href="assets/css/pages/account-notifications.css" />
-    <link rel="stylesheet" href="assets/css/layouts.css" />
-    <link rel="stylesheet" href="assets/css/components.css" />
     <title>Notifications - Account Settings - Airbnb</title>
   </head>
   <body class="with-new-header">
