--- a/airbnb-for-work.html
+++ b/airbnb-for-work.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="assets/css/base.css" />
+    <link rel="stylesheet" href="assets/css/global.css" />
     <link rel="stylesheet" href="assets/css/utilities.css" />
     <link rel="stylesheet" href="assets/css/pages/airbnb-for-work.css" />
     <link rel="stylesheet" href="assets/css/layouts.css" />
