--- a/reviews-tell-us.html
+++ b/reviews-tell-us.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="assets/css/base.css" />
+    <link rel="stylesheet" href="assets/css/global.css" />
     <link rel="stylesheet" href="assets/css/pages/reviews-tell-us.css" />
     <link rel="stylesheet" href="assets/css/components.css" />
 
