--- a/become-a-host/floor-plan.html
+++ b/become-a-host/floor-plan.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Create a listing - Airbnb</title>
 
-    <link rel="stylesheet" href="../assets/css/base.css" />
-    <link rel="stylesheet" href="../assets/css/utilities.css" />
+    <link rel="stylesheet" href="../assets/css/global.css" />
     <link
       rel="stylesheet"
       href="../assets/css/pages/become-a-host/floor-plan.css"
