fix homepage bugs

--- a/homepage.html
+++ b/homepage.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" href="assets/css/global.css" />
     <link rel="stylesheet" href="assets/css/pages/homepage.css" />
 
     <title>Explore</title>
@@ -17100,7 +17101,7 @@
                                           </div>
                                         </div>
                                         <nav
-                                          class="_1tt196k"
+                                          class="_1tt196k d-md-none"
                                           aria-hidden="false"
                                           data-shared-element-id="tab-bar"
                                           style=""
