--- a/products.html
+++ b/products.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" href="assets/css/global.css">
     <link rel="stylesheet" href="assets/css/pages/products.css" />
     <title>
       9 double bedroom luxury villa with infinity pool - Houses for Rent in
