--- a/profile.html
+++ b/profile.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" href="assets/css/global.css">
     <link rel="stylesheet" href="assets/css/pages/profile.css" />
     <title>Jose Angelo's Profile - Airbnb</title>
   </head>
