--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Home</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Merriweather:wght@700&display=swap"
       rel="stylesheet"
-      integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx"
-      crossorigin="anonymous"
     />
+
     <link rel="stylesheet" href="style.css" />
+    <title>Home</title>
   </head>
   <body>
     <section>
-      <div class="container">
+      <div class="container grid">
         <div>
           <h1>Root</h1>
           <ul>
@@ -22,6 +23,11 @@
             <li>
               <a href="account-notifications.html" target="_blank"
                 >account-notifications.html</a
+              >
+            </li>
+            <li>
+              <a href="account-settings.html" target="_blank"
+                >account-settings.html</a
               >
             </li>
             <li>
@@ -35,14 +41,19 @@
                 >calendar_agenda.html</a
               >
             </li>
+            <li><a href="calendar.html" target="_blank">calendar.html</a></li>
             <li>
               <a href="calendar_week.html" target="_blank"
                 >calendar_week.html</a
               >
             </li>
             <li>
+              <a href="contact-host.html" target="_blank">contact-host.html</a>
+            </li>
+            <li>
               <a href="covidsafety.html" target="_blank">covidsafety.html</a>
             </li>
+            <li><a href="dashboard.html" target="_blank">dashboard.html</a></li>
             <li>
               <a href="experiences.html" target="_blank">experiences.html</a>
             </li>
@@ -51,13 +62,34 @@
                 >experienceType.html</a
               >
             </li>
+            <li><a href="explore.html" target="_blank">explore.html</a></li>
             <li><a href="gift.html" target="_blank">gift.html</a></li>
             <li><a href="help.html" target="_blank">help.html</a></li>
+            <li><a href="homepage.html" target="_blank">homepage.html</a></li>
+            <li>
+              <a href="homepage-when.html" target="_blank"
+                >homepage-when.html</a
+              >
+            </li>
+            <li>
+              <a href="homepage-where.html" target="_blank"
+                >homepage-where.html</a
+              >
+            </li>
+            <li>
+              <a href="homepage-who.html" target="_blank">homepage-who.html</a>
+            </li>
             <li><a href="inbox.html" target="_blank">inbox.html</a></li>
+            <li><a href="index.html" target="_blank">index.html</a></li>
             <li><a href="insights.html" target="_blank">insights.html</a></li>
             <li>
               <a href="invite-friends.html" target="_blank"
                 >invite-friends.html</a
+              >
+            </li>
+            <li>
+              <a href="login-security.html" target="_blank"
+                >login-security.html</a
               >
             </li>
             <li>
@@ -76,6 +108,7 @@
                 >personal-info.html</a
               >
             </li>
+            <li><a href="places.html" target="_blank">places.html</a></li>
             <li>
               <a href="preferences.html" target="_blank">preferences.html</a>
             </li>
@@ -89,14 +122,21 @@
                 >privacy-and-sharing.html</a
               >
             </li>
+            <li><a href="products.html" target="_blank">products.html</a></li>
             <li>
               <a href="professional-hosting.html" target="_blank"
                 >professional-hosting.html</a
               >
             </li>
+            <li><a href="profile.html" target="_blank">profile.html</a></li>
             <li>
               <a href="profile-reviews.html" target="_blank"
                 >profile-reviews.html</a
+              >
+            </li>
+            <li>
+              <a href="resolutions_2.html" target="_blank"
+                >resolutions_2.html</a
               >
             </li>
             <li>
@@ -105,10 +145,14 @@
               >
             </li>
             <li>
+              <a href="resolutions.html" target="_blank">resolutions.html</a>
+            </li>
+            <li>
               <a href="resolutions_pay.html" target="_blank"
                 >resolutions_pay.html</a
               >
             </li>
+            <li><a href="resources.html" target="_blank">resources.html</a></li>
             <li><a href="reviews.html" target="_blank">reviews.html</a></li>
             <li>
               <a href="reviews-tell-us.html" target="_blank"
@@ -128,62 +172,11 @@
                 >transaction_history.html</a
               >
             </li>
+            <li><a href="trips.html" target="_blank">trips.html</a></li>
             <li><a href="wishlist.html" target="_blank">wishlist.html</a></li>
             <li><a href="wishlists.html" target="_blank">wishlists.html</a></li>
-            <li>
-              <a href="account-settings.html" target="_blank"
-                >account-settings.html</a
-              >
-            </li>
-            <li><a href="calendar.html" target="_blank">calendar.html</a></li>
-            <li>
-              <a href="contact-host.html" target="_blank">contact-host.html</a>
-            </li>
-            <li><a href="explore.html" target="_blank">explore.html</a></li>
-            <li>
-              <a href="login-security.html" target="_blank"
-                >login-security.html</a
-              >
-            </li>
-            <li><a href="places.html" target="_blank">places.html</a></li>
-            <li><a href="products.html" target="_blank">products.html</a></li>
-            <li>
-              <a href="resolutions_2.html" target="_blank"
-                >resolutions_2.html</a
-              >
-            </li>
-            <li><a href="resources.html" target="_blank">resources.html</a></li>
-            <li><a href="trips.html" target="_blank">trips.html</a></li>
-            <li><a href="dashboard.html" target="_blank">dashboard.html</a></li>
-            <li><a href="index.html" target="_blank">index.html</a></li>
-            <li><a href="profile.html" target="_blank">profile.html</a></li>
-            <li>
-              <a href="resolutions.html" target="_blank">resolutions.html</a>
-            </li>
           </ul>
         </div>
-        <div>
-          <h1>Home</h1>
-          <ul>
-            <li>
-              <a href="homepage.html" target="_blank">homepage.html</a>
-            </li>
-            <li>
-              <a href="homepage-when.html" target="_blank"
-                >homepage-when.html</a
-              >
-            </li>
-            <li>
-              <a href="homepage-where.html" target="_blank"
-                >homepage-where.html</a
-              >
-            </li>
-            <li>
-              <a href="homepage-who.html" target="_blank">homepage-who.html</a>
-            </li>
-          </ul>
-        </div>
-
         <div>
           <h1>Become a Host</h1>
           <ul>
@@ -195,11 +188,6 @@
             <li>
               <a href="become-a-host/description.html" target="_blank"
                 >become-a-host/description.html</a
-              >
-            </li>
-            <li>
-              <a href="become-a-host/first-level.txt" target="_blank"
-                >become-a-host/first-level.txt</a
               >
             </li>
             <li>
@@ -280,9 +268,7 @@
             <li>
               <a href="edit/title.html" target="_blank">edit/title.html</a>
             </li>
-            <li>
-              <a href="edit/what.html" target="_blank">edit/what.html</a>
-            </li>
+            <li><a href="edit/what.html" target="_blank">edit/what.html</a></li>
           </ul>
         </div>
 
